# oarp

./: LICENSE  README.md  pyproject.toml
examples/: recipe_request_ni.json
scripts/: run_all_done_validation.py
src/oa_research_pipeline.egg-info/: SOURCES.txt
src/oarp/: __main__.py  cache.py  extraction.py  graph_dual.py  knowledge.py  mp_enrichment.py  processing.py  recipe.py  service.py
src/oarp/adapters/: __init__.py  agents_inc.py
src/oarp/plugins/: __init__.py  base.py
tests/: test_acquisition_quality.py  test_benchmark_shadow.py  test_context_extraction.py  test_discovery_dedupe.py  test_discovery_localfs.py  test_discovery_saturation.py  test_graph_dual_concept.py  test_materials_project.py  test_mp_enrichment_stage.py  test_phase_graph_v1.py  test_pipeline_mock.py  test_processing_gnn_entry.py  test_processing_model.py  test_topic_spec.py  test_validate_all_done.py  test_validation_calibration.py  test_validation_taxonomy.py
work/feature-a/oa-research-pipeline/: .gitignore  README.md
work/feature-a/oa-research-pipeline/docker/: Dockerfile
work/feature-a/oa-research-pipeline/examples/: topic_ni_silicide.yaml
work/feature-a/oa-research-pipeline/examples/gold_ni/: gold_points.csv
work/feature-a/oa-research-pipeline/scripts/: bootstrap_strict.py
work/feature-a/oa-research-pipeline/src/oarp/: __init__.py  cli.py  (+21 more)
work/feature-a/oa-research-pipeline/tests/: test_benchmark_mp_output.py  test_bootstrap_strict.py  test_discovery_scoring.py  test_extraction_assembler.py  test_extraction_slm_swarm.py  test_extraction_tgi_required.py  test_knowledge_recipe.py  test_obsidian_vault.py  test_preflight_target_python.py  test_processing_gate_policy.py  test_quality_gate_coverage.py  test_release_validate_v1.py  test_run_full_workflow.py  test_validation_mp_modes.py
(+9 files in other folders)
